[Update] 03_DataEngineering - fixed some types, added some comments

--- a/notebooks/03_data_engineering.ipynb
+++ b/notebooks/03_data_engineering.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Basic Data wrangling\n",
-    "In this notebook I decided to use polars instead of pythons. You have to trust me that polars is faster when it comes to data wrangling compared to pandas. Especially on larger datasets!"
+    "In this notebook I decided to use polars instead of pandas. You have to trust me that polars is faster when it comes to data wrangling compared to pandas. Especially on larger datasets!"
    ]
   },
   {
@@ -36,6 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load the variables\n",
     "f_server = os.getenv(\"SERVER_Fabric\")\n",
     "f_database = os.getenv(\"DB_Fabric\")\n",
     "f_uid = os.getenv(\"UID_Fabric\")\n",
@@ -48,6 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create a connection to the database\n",
     "fabric_conn = pyodbc.connect(f'DRIVER={{ODBC Driver 17 for SQL Server}};SERVER={f_server};DATABASE={f_database};Authentication=ActiveDirectoryPassword;UID={f_uid};PWD={f_pwd};ConnectionTimeout=60')"
    ]
   },
@@ -57,6 +59,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Get the table from the database\n",
     "tableresult = pl.read_database(\"SELECT * FROM Training_DF_Youri\", fabric_conn)"
    ]
   },
@@ -75,6 +78,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Display the first 5 rows\n",
     "tableresult.head()"
    ]
   },
@@ -86,7 +90,8 @@
    "source": [
     "added_column = tableresult.with_columns(\n",
     "    (pl.col(\"Price\") * 0.5).alias(\"BlackFridayPrice\"),  # This adds a new column with the price dived in half\n",
-    "    Country=pl.lit(\"Netherlands\"))                      # This also adds a new column, using different syntax, as Country"
+    "    BlackFridayPrice2=(pl.col(\"Price\") * 0.5),          # This does the same as the previous line, but with a different syntax\n",
+    "    Country=pl.lit(\"Netherlands\"))                      # This also adds a new Country column, using different syntax."
    ]
   },
   {
@@ -95,6 +100,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Display the results\n",
     "added_column.head()"
    ]
   },
@@ -102,7 +108,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As you can see we have 2 new columns. One created by multiplying an existing column and one by adding a literal value. It's good to realise that our original dataframe `tableresults` is still the same. This is because our new dataframe is called `added_column` which essentially is a copy of `table_results`"
+    "As you can see we have 3 new columns. One created by multiplying an existing column and one by adding a literal value. It's good to realise that our original dataframe `tableresults` is still the same. This is because our new dataframe is called `added_column` which essentially is a copy of `table_results`"
    ]
   },
   {
@@ -128,7 +134,7 @@
    "outputs": [],
    "source": [
     "# Without a function: repetitive code\n",
-    "books_sales = tableresult.filter(pl.col(\"Category\") == \"Toys\").select(pl.col(\"TotalAmount\").sum()).to_numpy()[0][0]\n",
+    "books_sales = tableresult.filter(pl.col(\"Category\") == \"Toys\").select(pl.col(\"TotalAmount\").sum()).to_numpy()[0][0] # Don't worry about the to_numpy()[0][0], this is just to get the value from the Polars DataFrame\n",
     "clothing_sales = tableresult.filter(pl.col(\"Category\") == \"Clothing\").select(pl.col(\"TotalAmount\").sum()).to_numpy()[0][0]"
    ]
   },
@@ -157,7 +163,7 @@
     "        dataframe\n",
     "        .filter(pl.col(\"Category\") == category)\n",
     "        .select(pl.col(\"TotalAmount\").sum())\n",
-    "        .to_numpy()[0][0]  # Extract the scalar result\n",
+    "        .to_numpy()[0][0]  # Extract the scalar result, if you want more information on this, you can check the Polars/Numpy documentation for 'arrays'\n",
     "    )"
    ]
   },
