--- a/notebooks/04_exercise.ipynb
+++ b/notebooks/04_exercise.ipynb
@@ -23,17 +23,31 @@
     "5. Count the number of holidays in any given year\n",
     "6. Count the number of holidays in any given country\n",
     "7. Count the occurences of each holiday, which one is most common? which one is the least common?\n",
-    "8. When is the earliest holiday? and when the latest? \n",
+    "8. When is the earliest holiday? and when the latest?    \n",
+    "9. When is the largest gap between holidays? and how often does it occur?   \n",
+    "10. When is the second largest gap?  \n",
     "\n",
-    "These questions are a more difficult.  \n",
-    "9. When is the largest gap between holidays? and how often does it occur? \n",
-    "10. What is the second largest gap? "
+    "Some questions are harder than others so don't worry too much about answering all of them. It is just a nice exercise to get a feeling with polars and python. "
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
