--- a/notebooks/05_api.ipynb
+++ b/notebooks/05_api.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -89,15 +89,10 @@
        "   'displayName': 'Fabric Training',\n",
        "   'description': 'Workspace intented for training purposes',\n",
        "   'type': 'Workspace',\n",
-       "   'capacityId': '0636f535-08a2-40f0-868c-dfa95b4b6915'},\n",
-       "  {'id': 'e4b2f006-d4b1-4748-99b8-80fff3e2d145',\n",
-       "   'displayName': 'VMNED Meterpark',\n",
-       "   'description': '',\n",
-       "   'type': 'Workspace',\n",
-       "   'capacityId': '59bf0588-d5f4-405d-9e84-e1951313934f'}]}"
+       "   'capacityId': '0636f535-08a2-40f0-868c-dfa95b4b6915'}]}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +239,7 @@
        "   'folderId': 'd336d77b-cd2b-4920-a06b-d11c5d576dc4'}]}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +295,7 @@
        "   'format': 'delta'}]}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,16 +378,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "# We will now create a new lakehouse as example of using the POST method. A post method requires a payload to define what we are creating.\n",
     "workspace_id = \"72e84e34-91af-4979-b964-494963c114da\"\n",
     "\n",
-    "# We should also define a payload. The way it should be setup can be found on the API documentation.\n",
+    "# We should also define a payload. The way it should be setup can be found on the API documentation. Each API has its own way of defining the payload.\n",
     "payload = {\n",
-    "    \"displayName\": \"NewLakehouse\",\n",
+    "    \"displayName\": \"KijkDitIsnogeenLakehouse\",\n",
     "    \"description\": \"This is a new lakehouse created via API.\"\n",
     "}\n",
     "\n",
@@ -404,20 +399,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'id': 'f8596467-57fc-4588-bbc6-b05dc52ca4b9',\n",
+       "{'id': '631b2935-aa50-4f9d-ad7f-912121685f53',\n",
        " 'type': 'Lakehouse',\n",
-       " 'displayName': 'NewLakehouse',\n",
+       " 'displayName': 'KijkDitIsnogeenLakehouse',\n",
        " 'description': 'This is a new lakehouse created via API.',\n",
        " 'workspaceId': '72e84e34-91af-4979-b964-494963c114da'}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,7 +429,7 @@
    "source": [
     "# We decide that the name of the lakehouse is not what we want. We will PATCH it. \n",
     "workspace_id = \"72e84e34-91af-4979-b964-494963c114da\"\n",
-    "lakehouse_id = \"f8596467-57fc-4588-bbc6-b05dc52ca4b9\"\n",
+    "lakehouse_id = \"631b2935-aa50-4f9d-ad7f-912121685f53\"\n",
     "\n",
     "# We should also define a payload. The way it should be setup can be found on the API documentation.\n",
     "payload = {\n",
@@ -445,7 +440,16 @@
     "url = f\"https://api.fabric.microsoft.com/v1/workspaces/{workspace_id}/lakehouses/{lakehouse_id}\"\n",
     "\n",
     "# We make the API call\n",
-    "response = requests.post(url=url, headers=header, json=payload)"
+    "response = requests.patch(url=url, headers=header, json=payload)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response.json()"
    ]
   },
   {
@@ -462,6 +466,16 @@
     "\n",
     "# We make the API call. Notice how we do not need a payload now.\n",
     "response = requests.delete(url=url, headers=header)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We can check the status code to see if the delete was successful. A 200 status code means the delete was successful.We cannot use the .json() method here as there is no JSON response.\n",
+    "response"
    ]
   }
  ],
