Added dynamic path reference

--- a/notebooks/06_visualize_data.ipynb
+++ b/notebooks/06_visualize_data.ipynb
@@ -27,7 +27,8 @@
    "source": [
     "# We always start with importing the necessary packages (you probably need to activate your .venv and install them first)\n",
     "import matplotlib.pyplot as plt\n",
-    "import polars as pl"
+    "import polars as pl\n",
+    "from pathlib import Path"
    ]
   },
   {
@@ -39,7 +40,8 @@
    "source": [
     "# We will now use polars (but you can use pandas or another package) to read the data from the CSV file\n",
     "# note the r before the path, this is a raw string literal (windows sometimes has problems with backslashes in paths)\n",
-    "df = pl.read_csv(r\"C:\\Users\\YouriDibbet\\PipInstallParty\\data\\Global_Cybersecurity_Threats_2015-2024.csv\") "
+    "cwd = Path.cwd().parent\n",
+    "df = pl.read_csv(cwd / r\"data\\Global_Cybersecurity_Threats_2015-2024.csv\") "
    ]
   },
   {
